# quantdex

./: .gitignore  FACTSHEET.md  LICENSE  README.md  pyproject.toml  requirements-gpu.txt  requirements-llm.txt  requirements.txt
experiments/: exp01_turbo_quant_validation.py  exp02_variance_fraction.py  exp03_coarse_to_fine.py  exp04_code_trie.py  exp05_block_pruning.py  exp06_attention_quality.py  exp07_realistic_attention.py  exp08_gpu_benchmark.py  exp09_fused_cuda.py  exp10_definitive.py  exp11_ablations.py  exp12_real_attention.py
experiments/results/: exp01_results.json  exp02_results.json  exp03_results.json  exp04_results.json  exp05_results.json
paper/: Makefile  main.tex
quantdex/: __init__.py  sub_linear_attention.py  turbo_quant.py
src/: attention_patterns.py  metrics.py  sub_linear_attention.py
