[project]
name = "quantdex"
version = "0.1.0"
description = "Sub-Linear Attention via the Quantization-Indexing Duality"
requires-python = ">=3.10"
dependencies = ["numpy>=2.0", "scipy>=1.10", "matplotlib>=3.8"]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=14.0"]
llm = ["transformers>=5.0", "torch>=2.10", "accelerate>=1.10"]

[tool.setuptools.packages.find]
include = ["src*"]
